--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/design_communication_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/design_communication_notes.html
@@ -7,44 +7,164 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2>Safe Working Practices</h2>
+            <h2>Design communication</h2>
         </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+        <h3><b><u>Communication and Presentation Techniques:</b></u></h3>
+        <ul>
+            <li>Used to convey proposals and intentions to clients, users, and manufacturers</li>
+            <li>Helps ensure clarity and precision in design communication</li>
+            <li>Includes both written and visual methods</li><br><br><br><br>
+        </ul>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
-                </div>
+        <h3 id="ReportWriting"><u><b>Report Writing:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Presents detailed project findings</li>
+                    <li>Documents design decisions and justifications</li>
+                    <li>Used for formal communication with stakeholders</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Project proposals</li>
+                    <li>Design evaluations</li>
+                    <li>Manufacturing documentation</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+    <h3 id="Graphs"><u><b>Use of Graphs:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Visually represents data trends and comparisons</li>
+                    <li>Helps illustrate performance metrics</li>
+                    <li>Aids in decision-making and analysis</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Material strength comparison</li>
+                    <li>Product cost analysis</li>
+                    <li>Energy efficiency trends</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+    <h3 id="TablesCharts"><u><b>Tables and Charts:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Organizes complex information clearly</li>
+                    <li>Allows for quick data comparisons</li>
+                    <li>Used in technical specifications</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Material properties comparison</li>
+                    <li>Manufacturing process selection</li>
+                    <li>Design cost breakdown</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
 
+    <h3 id="Sketching"><u><b>2D/3D Sketching:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Quickly conveys design ideas</li>
+                    <li>Allows for initial concept visualization</li>
+                    <li>Used in early-stage design development</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Product concept sketches</li>
+                    <li>Technical design drafts</li>
+                    <li>Manufacturing layout plans</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
+
+    <h3 id="Rendering"><u><b>Mixed Media and Rendering:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Enhances visual appeal of sketches</li>
+                    <li>Creates realistic product presentations</li>
+                    <li>Used to showcase final concepts to clients</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Digital renderings</li>
+                    <li>Hand-drawn concept art</li>
+                    <li>Marketing visuals</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
+
+    <h3 id="Dimensioning"><u><b>Dimensioning and Details for Manufacture:</b></u></h3>
+    <table style="background-color: #f0f0f0; border-collapse: collapse; width: 600px; border: 1px solid #ccc; margin: auto;">
+        <tr style="background-color: #d9d9d9;">
+            <th>Purpose</th>
+            <th>Examples</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Ensures precise measurements</li>
+                    <li>Provides necessary information for production</li>
+                    <li>Used in technical drawings and CAD files</li>
+                </ul>
+            </td>
+            <td>
+                <ul>
+                    <li>Blueprints</li>
+                    <li>Manufacturing guides</li>
+                    <li>Engineering schematics</li>
+                </ul>
+            </td>
+        </tr>
+    </table><br><br><br><br>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
