--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/disassembly_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/disassembly_notes.html
@@ -5,46 +5,141 @@
     </head>
 
 <body>
-    <div class="containter"> 
+    <div class="container"> 
         <div class="quote">
-            <h2>Safe Working Practices</h2>
+            <h2>Disassembly</h2>
         </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+        
+        <div class="notes-content-subheader">
+            <h2><hr>Introduction to Design for Disassembly:<hr></h2>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <ul>
+            <li>Design for disassembly (DfD) is an approach that ensures products can be easily taken apart at the end of their life cycle.</li>
+            <li>This approach can reduce waste, enhance recycling, and simplify repairs and maintenance.</li>
+            <li>It involves the use of materials and techniques that allow easy separation of components without damaging them.</li><br>
+        </ul>
+
+        <div class="notes-content-subheader">
+            <h2><hr>Integral Fixings:<hr></h2><br>
+        </div>
+
+        <h3 id="IntegralFixings"><u><b></b></u></h3>
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr style="background-color: #d9d9d9;">
+                <th>Purpose</th>
+                <th>Examples</th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Integral fixings are designed to allow easy disassembly without the need for additional tools.</li>
+                        <li>They help maintain the structural integrity of the product during use while ensuring ease of disassembly at the end of life.</li>
+                        <li>These fixings may include clips, snap-fits, or screws that are easy to remove.</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Snap-fit joints in plastic components</li>
+                        <li>Interlocking fasteners in metal parts</li>
+                        <li>Reusable screws or rivets</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br><br><br>
+
+        <div class="notes-content-subheader">
+            <h2><hr>Active Disassembly with Smart Materials:<hr></h2><br>
+        </div>
+
+        <h3 id="ActiveDisassembly"><u><b></b></u></h3>
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr style="background-color: #d9d9d9;">
+                <th>Purpose</th>
+                <th>Examples</th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Active disassembly involves the use of smart materials such as shape memory alloys (SMA) and shape memory polymers (SMP).</li>
+                        <li>These materials respond to environmental stimuli, such as heat or electric current, causing a change in shape to facilitate disassembly.</li>
+                        <li>This method reduces the need for human intervention during disassembly, making it more efficient.</li>
+                        <li>At the end of a product's life, these materials are triggered to change shape, causing fixings and fastenings to loosen or detach.</li>
+                        <li>The contraction of SMA or SMP components enables partial or complete removal of joints and fixings.</li>
+                        <li>Vibration may be used to further assist in separating the product into component parts.</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Shape memory alloys (SMA) that change shape when heated to detach parts</li>
+                        <li>Shape memory polymers (SMP) that change shape when exposed to electric current or heat</li>
+                        <li>Magnetic fasteners activated by an external magnetic field</li>
+                        <li>Vibration techniques to assist in disassembly</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br><br><br>
+
+        <div class="notes-content-subheader">
+            <h2><hr>Biodegradable Parts:<hr></h2><br>
+        </div>      
+
+        <h3 id="BiodegradableParts"><u><b></b></u></h3>
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr style="background-color: #d9d9d9;">
+                <th>Purpose</th>
+                <th>Examples</th>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Biodegradable parts help ensure that products can be broken down safely and sustainably after use.</li>
+                        <li>These parts decompose naturally, reducing environmental impact and waste.</li>
+                        <li>They can be used in areas where the product’s lifespan is limited, such as packaging or temporary fixtures.</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Biodegradable plastics for packaging</li>
+                        <li>Compostable materials in temporary product components</li>
+                        <li>Eco-friendly adhesives and coatings</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br><br><br>
+
+        <div class="notes-content-subheader">
+            <h2><hr>Advantages of Designing for Disassembly:<hr></h2><br>
+        </div>   
+
+        <h3 id="Advantages"><u><b></b></u></h3>
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr style="background-color: #d9d9d9;">
+                <th style="background-color: rgba(173, 255, 47, 0.5); color: rgb(0, 0, 0);">Advantages</th>
+                <th>Examples</th>
+            </tr>
+            <tr>
+                <td style="background-color: rgba(173, 255, 47, 0.5);">
+                    <ul>
+                        <li>Reduces environmental impact by facilitating recycling and reuse.</li>
+                        <li>Improves product longevity by simplifying repairs and part replacements.</li>
+                        <li>Encourages sustainable design practices and can enhance brand reputation.</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Recycling of electronic products at end of life</li>
+                        <li>Easy-to-repair appliances with modular components</li>
+                        <li>Eco-friendly product lines designed with minimal waste</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br><br><br>
+
     </div>
+    
+    <script src="/footer.js"></script>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
