--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ease_of_manufacture_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/ease_of_manufacture_notes.html
@@ -5,46 +5,242 @@
     </head>
 
 <body>
-    <div class="containter"> 
+    <div class="container">
         <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+            <h2>Design for Efficient Manufacture</h2>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr style="background-color: #d9d9d9;">
+                <th>Design Feature</th>
+                <th>Purpose</th>
+            </tr>
+            <tr>
+                <td><strong>Ribs and Webbing</strong></td>
+                <td>Used to reduce material thicknesses while maintaining strength and stability in the design.</td>
+            </tr>
+            <tr>
+                <td><strong>Snap Fittings</strong></td>
+                <td>Eliminates the need for additional fixings or adhesives, reducing complexity and cost.</td>
+            </tr>
+            <tr>
+                <td><strong>Internal Moulded Screw Posts</strong></td>
+                <td>Used with self-tapping screws, removing the need for separate fasteners and making assembly simpler.</td>
+            </tr>
+            <tr>
+                <td><strong>Use of Pre-Made Components</strong></td>
+                <td>Leverages existing parts to reduce manufacturing time and cost.</td>
+            </tr>
+            <tr>
+                <td><strong>Standardised Patterns and Sizes</strong></td>
+                <td>Using standardised sizes and patterns for easier and quicker assembly, aiding mass production.</td>
+            </tr>
+            <tr>
+                <td><strong>Addition of Texture in Moulding</strong></td>
+                <td>Reduces the number of required manufacturing processes, such as additional finishing steps.</td>
+            </tr>
+            <tr>
+                <td><strong>Self Finishing</strong></td>
+                <td>Designs that require no further finishing processes once manufactured, reducing labor and cost.</td>
+            </tr>
+        </table>
+        <div class="notes-content-subheader">
+            <h2><hr><hr></h2><br>
+        </div> 
+
+        <h3 id="RibsAndWebbing"><b><u>Ribs and Webbing to Reduce Material Thicknesses:</u></b></h3>
+        <ul>
+            <li>Ribs and webbing help reinforce a product while reducing the overall material thickness.</li>
+            <li>This method allows for lighter products and cost-effective manufacturing by using less material.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces material usage</li>
+                        <li>Strengthens products with minimal weight</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>May require more complex molding processes</li>
+                        <li>Increased material waste during manufacturing</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="SnapFittings"><b><u>Snap Fittings to Remove the Need for Fixings/Adhesives:</u></b></h3>
+        <ul>
+            <li>Snap fittings eliminate the need for screws or adhesives by allowing components to click together.</li>
+            <li>This method is quick to assemble, reducing time and labor costs in manufacturing.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces the need for adhesives and screws</li>
+                        <li>Quick and easy assembly process</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>May not provide as strong a connection as screws or adhesives</li>
+                        <li>Limited to specific material types</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="InternalMouldedScrewPosts"><b><u>Internal Moulded Screw Posts for Use with Self-Tapping Screws:</u></b></h3>
+        <ul>
+            <li>Internal moulded screw posts eliminate the need for external fasteners and improve product durability.</li>
+            <li>They provide a secure connection point for self-tapping screws.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces the need for external fixings</li>
+                        <li>Provides a secure and durable connection point</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>May complicate the moulding process</li>
+                        <li>Requires accurate placement of screw posts</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="PreMadeComponents"><b><u>Use of Pre-Made Components:</u></b></h3>
+        <ul>
+            <li>Using pre-made components saves time in manufacturing and ensures consistent quality.</li>
+            <li>It reduces the need for custom tooling or complex processes.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Saves time and money in manufacturing</li>
+                        <li>Ensures high consistency and quality</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Less flexibility in design</li>
+                        <li>May require inventory management</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="StandardizedPatternsAndSizes"><b><u>Use of Standardised Patterns and Sizes:</u></b></h3>
+        <ul>
+            <li>Standardized parts allow for more efficient manufacturing and easier sourcing of components.</li>
+            <li>They help reduce production costs and simplify assembly processes.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Cost-effective and time-efficient</li>
+                        <li>Simplifies assembly and sourcing of components</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Limits design flexibility</li>
+                        <li>May not fit all products perfectly</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="TextureInMoulding"><b><u>Addition of Texture in Moulding to Reduce Number of Manufacturing Processes:</u></b></h3>
+        <ul>
+            <li>Adding texture to the mould surface can reduce the need for additional finishing processes, such as painting or coating.</li>
+            <li>This method can save time and reduce manufacturing costs.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces the need for additional finishing steps</li>
+                        <li>Cost-effective and time-saving</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Texturing may limit design flexibility</li>
+                        <li>Texture may wear over time with use</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="SelfFinishing"><b><u>Self Finishing:</u></b></h3>
+        <ul>
+            <li>Self-finishing eliminates the need for additional post-processing such as painting or coating.</li>
+            <li>This can reduce production costs and shorten manufacturing time.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces production costs and time</li>
+                        <li>Less post-processing required</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Limited design options for finishing</li>
+                        <li>May not always provide desired aesthetics</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
     </div>
+    
+    <script src="/footer.js"></script>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
