--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
@@ -5,46 +5,145 @@
     </head>
 
 <body>
-    <div class="containter"> 
+    <div class="container">
         <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+            <h2>Efficient use of materials</h2>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <h3 id="MaterialCostFormAndManufacturing"><b><u>Relationship Between Material Cost, Form, and Manufacturing Processes:</u></b></h3>
+        <ul>
+            <li>Students must understand how material cost affects the form of a product and the choice of manufacturing processes.</li>
+            <li>Manufacturing processes should align with the material's characteristics to ensure cost-efficiency and optimal design.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Optimizes material usage for cost-effectiveness</li>
+                        <li>Enhances manufacturing efficiency through appropriate process selection</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Can increase upfront design costs due to material and process selection</li>
+                        <li>Requires a deep understanding of materials and manufacturing processes</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="EconomicMaterialUse"><b><u>Development of Designs Using Materials Economically and with Regard to Their Characteristics:</u></b></h3>
+        <ul>
+            <li>Designers should use materials economically, keeping in mind their specific characteristics to ensure efficient manufacturing.</li>
+            <li>Understanding material properties allows designers to avoid over-engineering or underutilizing materials.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Reduces material wastage and lowers costs</li>
+                        <li>Increases the longevity and functionality of the product</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Requires careful analysis of material properties</li>
+                        <li>May limit design flexibility in some cases</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="ManufacturingProcesses"><b><u>Use of Manufacturing Processes to Increase Accuracy and Reduce Waste:</u></b></h3>
+        <ul>
+            <li>Manufacturing processes should be selected to increase the accuracy of product dimensions while minimizing waste.</li>
+            <li>Techniques such as precision tooling or additive manufacturing can help achieve these goals.</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Increases product quality and precision</li>
+                        <li>Reduces material waste, leading to cost savings</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Advanced manufacturing processes can require significant investment</li>
+                        <li>May increase production time in some cases</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="BulkVsOneOffProduction"><b><u>Bulk Production vs One-Off Production:</u></b></h3>
+        <ul>
+            <li>Bulk production allows for economies of scale, reducing the cost per unit when producing large quantities</li>
+            <li>One-off production, however, may be more cost-effective for unique or low-volume items</li>
+            <li>Bulk buying of materials reduces the price per unit of the material</li>
+        </ul>
+
+        <table style="background-color: #f0f0f0; border-collapse: collapse; width: 700px; border: 1px solid #ccc; margin: auto;">
+            <tr class="notes-table-header" style="background-color: #d9d9d9;">
+                <th>Advantages</th>
+                <th>Disadvantages</th>
+            </tr>
+            <tr>
+                <td class="notes-table-data-pro">
+                    <ul>
+                        <li>Bulk production significantly reduces the cost per unit</li>
+                        <li>Ideal for mass-market products</li>
+                    </ul>
+                </td>
+                <td class="notes-table-data-con">
+                    <ul>
+                        <li>Bulk production can lead to excess inventory if demand is underestimated</li>
+                        <li>One-off production may offer more flexibility, but higher cost per unit</li>
+                    </ul>
+                </td>
+            </tr>
+        </table><br><br>
+
+        <h3 id="JustInTimeJIT"><b>Just-in-time (JIT):</b></h3>
+            <table>
+                <tr class="notes-table-header">
+                    <th>Advantages</th>
+                </tr>
+                <tr>
+                    <td class="notes-table-data-pro">
+                        <ul>
+                            <li>Parts are ordered when needed/automatically</li>
+                            <li>Less money tied up in stock</li>
+                            <li>Less storage space needed, cost of warehouse spacing reduced</li>
+                            <li>High returns for company</li>
+                            <li>Reduces the movement of materials, environmental factor</li>
+                            <li>Lean manufacturing reduces prodctuon times</li>
+                            <li>Can react quickly to market trends</li>
+                            <li>Higher levels of quality assurance</li>
+                            <li>Increased job satisfaction</li>
+                            <li>Reduces labour costs</li>
+                        </ul>
+                    </td>
+
     </div>
+    
+    <script src="/footer.js"></script>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
