--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/elastomers_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/elastomers_notes.html
@@ -5,46 +5,158 @@
     </head>
 
 <body>
-    <div class="containter"> 
+    <div class="containter">
         <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+            <h2>Elastomers</h2>
+        </div> 
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <div class="notes-content-subheader">
+                        <h2><hr>Elastomers: Materials that can be stretched and then return to their original shape, with key properties including texture, self-finishing, and non-toxicity.<hr></h2>
                     </div>
-                </div>
+                </div><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="NaturalRubber"><b><u>Natural Rubber:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Good elasticity and flexibility</li>
+                                <li>Excellent tensile strength</li>
+                                <li>Resistant to abrasion and wear</li>
+                                <li>Biodegradable</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can degrade with prolonged exposure to UV light and ozone</li>
+                                <li>Not resistant to oil and solvents</li>
+                                <li>Relatively poor at high temperatures</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Tyres, rubber bands, footwear<br><br><br><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="Polybutadiene"><b><u>Polybutadiene:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Excellent wear resistance</li>
+                                <li>Good elasticity at low temperatures</li>
+                                <li>Low glass transition temperature (good flexibility in cold weather)</li>
+                                <li>Highly resistant to abrasion</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be sensitive to oxidation and UV light</li>
+                                <li>Not as resistant to heat as other elastomers</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Tyres, sports equipment, impact-resistant parts<br><br><br><br>
 
+                <h3 id="Neoprene"><b><u>Neoprene:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Resistant to oil, chemicals, and weathering</li>
+                                <li>Good flexibility across a wide range of temperatures</li>
+                                <li>Good aging resistance</li>
+                                <li>Non-toxic and stable</li>
+                                <li>Easily pigmented</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Relatively expensive compared to natural rubber</li>
+                                <li>Can degrade under prolonged exposure to sunlight</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Wetsuits, gaskets, hoses, seals<br><br><br><br>
+
+                <h3 id="Silicone"><b><u>Silicone:</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Excellent heat resistance</li>
+                                <li>Non-toxic and biocompatible</li>
+                                <li>Good electrical insulating properties</li>
+                                <li>Resistant to UV light, ozone, and weathering</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Expensive compared to other elastomers</li>
+                                <li>Can be sensitive to solvents and oils</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Cookware, medical devices, seals, electrical insulation<br><br><br><br>
+
+                <h3 id="TPE"><b><u>Thermoplastic Elastomer (TPE):</b></u></h3>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Can be reprocessed by melting</li>
+                                <li>Good flexibility and impact resistance</li>
+                                <li>Lightweight</li>
+                                <li>Non-toxic and safe for a wide range of applications</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Lower heat resistance compared to thermoset elastomers</li>
+                                <li>Can be less durable in harsh conditions</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+                <h3><b>Uses:</b> Grips, seals, flexible tubing, consumer goods<br><br><br><br>
+
+                <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="\documents\Q&A\Materials\Elastomers_Q&A.pdf">Elastomers Questions</a>
+                </div>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
