--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/electronic_data_interchange_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/electronic_data_interchange_notes.html
@@ -5,46 +5,91 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="container">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="EPOS background">
+                <h1 style="color:white"><u><b>Electronic data interchanges</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <div class="notes-content-subheader">
+                        <h2><hr>Electronic Point of Sale (EPOS): Electronic systems for processing sales transactions, managing stock, and capturing customer data.<hr></h2>
                     </div>
-                </div>
+                </div><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="StockMaintenance"><b><u>Maintenance of Stock Levels:</b></u></h3>
+                <ul>
+                    <li>Automatically updates stock levels in real-time when items are sold.</li>
+                    <li>Reduces the need for manual stock-taking, saving time and effort.</li>
+                    <li>Helps businesses track inventory more efficiently.</li>
+                </ul><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Improves inventory accuracy and reduces human error.</li>
+                                <li>Enables better demand forecasting and stock replenishment.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Can be expensive to set up and maintain.</li>
+                                <li>Requires reliable internet connection for real-time updates.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table><br><br>
 
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2><br>
+                </div> 
+
+                <h3 id="CustomerDataCapture"><b><u>Capture of Customer Data:</b></u></h3>
+                <ul>
+                    <li>Captures customer information such as name, contact details (email, phone number), and purchasing history.</li>
+                    <li>Can store this data for future marketing campaigns, loyalty programs, or personalised offers.</li>
+                    <li>Helps businesses improve customer relationships and target promotions more effectively.</li>
+                </ul><br>
+
+                <table>
+                    <tr class="notes-table-header">
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Enhances customer loyalty by offering personalized experiences and offers.</li>
+                                <li>Improves marketing efficiency through targeted promotions.</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires customers' consent to capture and store their data (data protection laws).</li>
+                                <li>Risk of data breaches and security issues if not properly managed.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table><br><br>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2><br>
+                </div> 
+
+                <h3><b>Uses:</b> EPOS systems are commonly used in retail stores, restaurants, and supermarkets to manage sales, inventory, and customer data.<br><br><br><br></h3>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
