--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/feasibility_studies.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/feasibility_studies.html
@@ -4,47 +4,59 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <body>
+        <div class="container">
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="EPOS background">
+                    <h1 style="color:white"><u><b>Feasibility studies
+                    </b></u></h1>
+                </div><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <div class="notes-content-subheader">
                     </div>
                 </div>
+                <h3 id="FeasibilityStudies"><b><u>Feasibility Studies:</b></u></h3>
+                <ul>
+                    <li>A feasibility study is an analysis to assess the practicality and viability of a proposed design or project before moving forward with full-scale production.</li>
+                    <li>The study considers factors such as technical feasibility, financial viability, resource availability, and potential market demand.</li>
+                    <li>It helps businesses identify potential risks and challenges and determine if a project should proceed, be modified, or be abandoned.</li>
+                    <li>Feasibility studies typically involve assessing the technical capabilities needed for production, the cost of materials, and the potential return on investment.</li>
+                </ul><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="TestingPrototypes"><b><u>Testing of Prototypes with Potential Consumers:</b></u></h3>
+                <ul>
+                    <li>Testing prototypes involves creating an early version of a product to assess its functionality, design, and user experience.</li>
+                    <li>By testing prototypes with potential consumers, companies can gather valuable feedback to refine the design before mass production begins.</li>
+                    <li>Prototype testing can identify design flaws, gauge user acceptance, and assess overall demand for the product.</li>
+                    <li>Consumer feedback during prototype testing helps ensure that the product meets the needs and preferences of the target market.</li>
+                </ul><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="StepsInFeasibilityStudy"><b><u>Steps Involved in a Feasibility Study:</b></u></h3>
+                <ul>
+                    <li>1. Define the Problem: Clearly outline the problem the product is trying to solve.</li>
+                    <li>2. Technical Feasibility: Evaluate whether the necessary technology and skills are available to build the product.</li>
+                    <li>3. Financial Feasibility: Analyse the costs of production, market research, and distribution to determine if the project is financially viable.</li>
+                    <li>4. Market Feasibility: Assess the demand for the product and the target audience.</li>
+                    <li>5. Risk Analysis: Identify potential risks, such as competition, market shifts, and supply chain issues.</li>
+                    <li>6. Conclusion: Decide whether the product should move to the next phase of development or if adjustments are needed.</li>
+                </ul><br>
 
+                <h3 id="BenefitsOfFeasibilityStudies"><b><u>Benefits of Feasibility Studies:</b></u></h3>
+                <ul>
+                    <li>Provides a clear understanding of the product's potential success in the market.</li>
+                    <li>Helps save time and money by identifying problems early in the development process.</li>
+                    <li>Improves decision-making by providing data on technical, financial, and market considerations.</li>
+                    <li>Increases the chances of successful product launch by refining designs and addressing consumer needs.</li>
+                </ul><br>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
