--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/inclusive_design_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/inclusive_design_notes.html
@@ -4,47 +4,60 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <body>
+        <div class="container">
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="EPOS background">
+                    <h1 style="color:white"><u><b>Inclusive design
+                    </b></u></h1>
+                </div><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
+                    <div class="notes-content-subheader">
                     </div>
-                </div>
+                </div><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="InclusiveDesign"><b><u>Inclusive Design:</b></u></h3>
+                <ul>
+                    <li>Inclusive design is the practice of designing products and services that can be used by the widest possible audience, regardless of age, ability, or background.</li>
+                    <li>The goal is to create accessible, usable, and effective products for people with varying needs, including the disabled, elderly, and children.</li>
+                    <li>Inclusive design often takes into account a wide range of factors such as mobility, cognitive abilities, sensory impairments, and ergonomic needs.</li>
+                    <li>It focuses on creating solutions that do not require special adaptation or specialized designs for particular groups of people.</li>
+                </ul><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="InclusiveDesignInPractice"><b><u>Inclusive Design in Practice:</b></u></h3>
+                <ul>
+                    <li>Inclusive design is used in a variety of products, from physical items like furniture and transportation to digital solutions like websites and mobile apps.</li>
+                    <li>Key principles include: accessibility (ease of use for all), adaptability (customizing for specific needs), and usability (ensuring ease of interaction).</li>
+                    <li>For example, a product designed for elderly users may include larger buttons, adjustable settings, and clearer text for those with visual impairments.</li>
+                    <li>Designs for children might focus on fun, ease of use, and safety, while also being intuitive and durable.</li>
+                    <li>Incorporating feedback from diverse users is essential during the design process to ensure that products are truly inclusive.</li>
+                </ul><br>
 
+                <h3 id="ExamplesOfInclusiveDesign"><b><u>Examples of Inclusive Design:</b></u></h3>
+                <ul>
+                    <li>Accessible ramps and doorways in public buildings for users in wheelchairs or with mobility impairments.</li>
+                    <li>Touchscreen devices with adjustable font sizes, screen readers, and other features for users with visual impairments.</li>
+                    <li>Children's toys designed with safety features, such as rounded edges and non-toxic materials, that are easy to manipulate for small hands.</li>
+                    <li>Adaptive controllers in gaming systems that can be customized for individuals with physical disabilities.</li>
+                </ul><br>
+
+                <h3 id="BenefitsOfInclusiveDesign"><b><u>Benefits of Inclusive Design:</b></u></h3>
+                <ul>
+                    <li>Improves product accessibility, making it available to a wider range of people.</li>
+                    <li>Enhances user experience for everyone by ensuring ease of use, comfort, and safety.</li>
+                    <li>Can lead to innovations that benefit not only the target group but all users.</li>
+                    <li>Increases market reach by addressing the needs of underrepresented groups.</li>
+                    <li>Fosters inclusivity and equality, supporting social responsibility efforts.</li>
+                </ul><br>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
