--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/enterprise_a_marketing__dev_o_prod_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/enterprise_a_marketing__dev_o_prod_notes.html
@@ -4,47 +4,76 @@
         <script src="/head.js" defer></script>
     </head>
 
-<body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+    <body>
+        <div class="container">
+            <div class="notes-content-wrapper">
+                <div class="notes-content-header" style="background-image:url(/images/matnoteComposite.jpg)" title="EPOS background">
+                    <h1 style="color:white"><u><b>Enterprise and marketing in the development of products</b></u></h1>
+                </div><br>
+                <div class="notes-content">
+                    <div class="notes-content-intro">
+                        <div class="notes-content-subheader">
                         </div>
-                    </div>
-                </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="CustomerIdentification"><b><u>Customer Identification:</b></u></h3>
+                <ul>
+                    <li>Identifying target customers is crucial for ensuring that products meet the specific needs and preferences of a market segment.</li>
+                    <li>Marketing research tools such as surveys and focus groups help businesses understand the demographics, behaviors, and preferences of potential customers.</li>
+                </ul><br>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+                <h3 id="Labelling"><b><u>Labelling:</b></u></h3>
+                <ul>
+                    <li>Product labels communicate essential information, including product ingredients, usage instructions, and safety warnings.</li>
+                    <li>Effective labelling can help differentiate a product from competitors and build brand recognition.</li>
+                    <li>Legally, certain information, such as allergens and nutritional content, must be included on labels to comply with regulations.</li>
+                </ul><br>
 
+                <h3 id="Packaging"><b><u>Packaging:</b></u></h3>
+                <ul>
+                    <li>Packaging is vital for attracting customers and protecting the product during transport and storage.</li>
+                    <li>Well-designed packaging can enhance the perception of product quality and strengthen brand identity.</li>
+                    <li>Eco-friendly packaging is becoming increasingly important as consumers become more environmentally conscious.</li>
+                </ul><br>
+
+                <h3 id="CorporateIdentification"><b><u>Corporate Identification:</b></u></h3>
+                <ul>
+                    <li>Corporate identity refers to the visual elements, such as logos, colors, and slogans, that represent a business and distinguish it from others.</li>
+                    <li>A strong corporate identity helps build consumer trust and creates a recognizable brand presence in the market.</li>
+                </ul><br>
+
+                <h3 id="GlobalMarketing"><b><u>Concept of Global Marketing:</b></u></h3>
+                <ul>
+                    <li>Global marketing involves promoting and selling products in international markets, which requires a deep understanding of cultural, economic, and legal differences.</li>
+                    <li>Companies need to tailor their marketing strategies to fit the specific needs and preferences of diverse global markets while maintaining a consistent brand image.</li>
+                </ul><br>
+
+                <h3 id="PromotionAndAdvertisement"><b><u>Promotion and Advertisement of Products:</b></u></h3>
+                <ul>
+                    <li>Promotional strategies include advertisements, social media campaigns, discounts, and special offers that encourage customers to make a purchase.</li>
+                    <li>Social media and viral marketing have become powerful tools for promoting products, allowing businesses to reach global audiences quickly and effectively.</li>
+                    <li>New technologies such as augmented reality (AR) and virtual reality (VR) are also being used to enhance marketing efforts and engage customers in innovative ways.</li>
+                </ul><br>
+
+                <h3 id="ProductCostingAndProfit"><b><u>Product Costing and Profit:</b></u></h3>
+                <ul>
+                    <li>Product costing involves calculating the expenses incurred in the production of a product, including raw materials, labor, and overheads.</li>
+                    <li>Profit is calculated by subtracting the total cost from the selling price, and it is a key factor in determining the financial success of a product.</li>
+                </ul><br>
+
+                <h3 id="RoleOfEntrepreneurs"><b><u>The Role of Entrepreneurs:</b></u></h3>
+                <ul>
+                    <li>Entrepreneurs drive innovation and are key to bringing new products to market. They identify market gaps and take risks to create and promote new products or services.</li>
+                    <li>Entrepreneurs often collaborate with designers, engineers, and marketers to develop products that meet consumer needs and are commercially viable.</li>
+                </ul><br>
+
+                <h3><b>Collaborative Working of Designers:</b> Designers work collaboratively with entrepreneurs, engineers, and marketers to bring innovative products to life. This includes virtual and faceted design processes where ideas are shared digitally or physically to refine and finalize the product.<br><br><br><br></h3>
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
