--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/jigs_and_fixtures_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/jigs_and_fixtures_notes.html
@@ -5,46 +5,80 @@
     </head>
 
 <body>
-    <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+    <div class="containter">  
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_marking_tools.jpg)" title="alloy background">
+                <h1 style="color:white"><u><b>Jigs and fixtures</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
+            <div class="notes-content">
+                <div class="notes-content-intro">
                 </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
+                    <h3 id="Jigs"><b><u>Jigs:</b></u></h3>
+                <h3><ul>
+                        <li>A jig is used to control the motion of a tool</li>
+                    </ul></h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Increase rate of production</li>
+                                    <li>Allow for repeatable accuracy</li>
+                                    <li>Requires little skill to use</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                <li>Jig must be bought/created before it can be used</li>
+                                    <li>Only suitable for low volume/batch production</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h3 id="Fixtures"><b><u>Fixtures:</b></u></h3>
+                <h3><ul>
+                        <li>Used to support/hold the workpiece in place</li>
+                    </ul></h3>
+                    <table>
+                        <tr class="notes-table-header">
+                            <th>Advantages</th>
+                            <th>Disadvantages</th>
+                        </tr>
+                        <tr>
+                            <td class="notes-table-data-pro">
+                                <ul>
+                                    <li>Increase rate of production</li>
+                                    <li>Allow for repeatable accuracy</li>
+                                </ul>
+                            </td>
+                            <td class="notes-table-data-con">
+                                <ul>
+                                    <li>Former must be bought/created before it can be used</li>
+                                    <li>Only suitable for low volume/batch production</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </table>
+
+                    <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools Questions</a>
                     </div>
                 </div>
-
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
+
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
